# chromacal

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  release-macos.yml  wheels.yml  windows-ci.yml
cmake/: chromacalConfig.cmake.in
docs/: algorithm.md  colorchecker_reference.md
examples/: apply_calibration.cpp  calibrate.cpp  inspect_patches.cpp
include/chromacal/: apply.h  chromacal.h  detect.h  solver.h  types.h
plugin/: CMakeLists.txt  README.md  RELEASING.md  TESTING-PROTOCOL.md  TESTING.md  THIRD-PARTY.md  USER-GUIDE.md  WINDOWS.md  index.html  manifest.json
plugin/effect/: Info.plist  README.md  build_bundle.sh  build_windows.ps1  chromacal.iss  chromacal_effect.cpp  chromacal_effect.h  chromacal_effect.r  chromacal_encode.h  chromacal_gpu.h  chromacal_gpu_mac.mm  chromacal_kernel.metal  gpu_kernel_test.mm  make_installer.sh  notarize.sh  release.sh  save_dialog_mac.mm  save_dialog_win.cpp  win_pipl.cmake
plugin/native/: apply_cli.cpp  chromacal_addon.cpp  cube_cli.cpp  diff_cli.cpp  lutapply_cli.cpp  solve_cli.cpp  solve_core.cpp  solve_core.h
plugin/src/: main.js
python/: bindings.cpp
src/: apply.cpp  detect.cpp  lut_ocio.cpp  solver.cpp
src/chromacal/: __init__.py
tests/: cube_parity.sh  ppro_parity.sh  test_apply.cpp  test_detect.cpp  test_encode.cpp  test_integration.cpp  test_solver.cpp  test_types.cpp
